crates/djls-extraction/tests/snapshots/corpus__extraction_snapshots@packages__Django__5.1.15__django__contrib__admin__templatetags__admin_list.py.snap
---
source: crates/djls-extraction/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/packages/Django/5.1.15/django/contrib/admin/templatetags/admin_list.py
---
tag_rules:
  "django.contrib.admin.templatetags.admin_list::admin_list_filter":
    arg_constraints:
      - Min: 3
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: cl
        required: true
        kind: Variable
        position: 0
      - name: spec
        required: true
        kind: Variable
        position: 1
    supports_as_var: true
  "django.contrib.admin.templatetags.admin_list::paginator_number":
    arg_constraints:
      - Min: 3
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: cl
        required: true
        kind: Variable
        position: 0
      - name: i
        required: true
        kind: Variable
        position: 1
    supports_as_var: true
filter_arities: {}
block_specs: {}
