crates/djls-extraction/tests/snapshots/corpus__extraction_snapshots@packages__Django__5.1.15__django__contrib__admin__templatetags__admin_modify.py.snap
---
source: crates/djls-extraction/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/packages/Django/5.1.15/django/contrib/admin/templatetags/admin_modify.py
---
tag_rules: {}
filter_arities:
  "django.contrib.admin.templatetags.admin_modify::cell_count":
    expects_arg: false
    arg_optional: false
block_specs: {}
